[package]
name = "basic_rt_so"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
bit_field = "0.9.0"
woke = "0.0.2"

