[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
riscv = { path = "../third-party/riscv", features = ["inline-asm"] }
spin = "0.9"
woke = "0.0.2"
futures = { version = "0.3", default-features = false }


[profile.release]
debug = true
